app/pages/kid-dashboard/kid-dashboard.css
/* kid cover phot and profile and name section*/

Image.kid-profile-image {
    height: 75;
    width: 75;
    border-radius: 36;
}

Image.kid-cover-image {
    height: 100;
}

StackLayout.kid-profile-image-container {
    border-color:  #9fc5f8;
    border-width: 2;
    border-radius: 38;

}

StackLayout.kid-profile-container {
    vertical-align: middle;
    horizontal-align: center;
    margin-left: 10;
    height: 100;
}

.kid-profile-container .kid-name {
    border-color:  #9fc5f8;
    vertical-align: middle;
    margin-left: 10;
    margin-right: 20px;
    font-size: 20;
    color: #9fc5f8;
    font-style: italic;
    font-weight: bold;
}


/*
navigation-links-1 -> Profile details, Documents, Notes
*/

.kid-dashboard .navigation-links-1 {
    margin: 10px;
}


/*Navigational-links-2 -> Reminders , Notifcations*/
.kid-dashboard .navigation-links-2 {
    margin: 10px 0 10px 0;
}

.number-with-circle.reminders{
    background-color: orange;
    margin-right: 5px;
}
.number-with-circle.notifications{
    background-color:  #2b78e4;
    margin-right: 5px;
}

/* capture image section */
.capture-moment-section {
    margin-bottom: 10px;
}
.capture-moment-section .text{
    font-style: italic;
    font-size: small;
    margin-top: -2px;
}

/* Moment Container with Cover Image and Org Logo */
.moment-image-container .cover-image{
   /* height: 300;*/
    min-height: 200;
}

.moment-image-container .org-container {
    margin: 10;
}

/*Moment Tags section */

GridLayout.moment-tags{
    margin: 2px 10px 10px 5px;
}

.rounded-corner-icon.tagged-profile-pic{
    padding: 6px;
}

.moment-tags .tagged-on-date{
    font-size: 10px;
}

/* Moment comments */
.rounded-corner-icon.commenter-profile-pic{
    padding: 15px;
}

StackLayout.moment-comment-item{
 margin: 5px 10px 5px 5px;
}


.moment-comment-item .kid-name{
    font-size: 13px;
}
.moment-comment-item .relation-name{
    font-size: 11px;
    margin-left: 5px;
    margin-top: 1px;
}

.moment-comment-item .comment-details{
    margin: 10px 5px 5px 5px;
}

GridLayout.moment-bottom-section{
    margin: 10px 10px 5px 5px;
}

    /* common for all*/
.horizontal-separator  {
    height: 1px;
    background-color: #dddddd;
    /*margin:0 20px 0 20px;*/
}

.comment-hr-separator{
    height: 1px;
    background-color: #dddddd;
    margin: 0 10px 0 10px;
}


Image.kid-profile-pic{
    border-radius: 20;
}

Image.parent-profile-pic{
    border-radius: 30;
}

